--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cleanup:user": "ts-node src/scripts/cleanupUsers.ts",
+    "cleanup:all": "ts-node src/scripts/cleanupUsers.ts --all"
   },
   "keywords": [
     "lost-found",
