--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
   "author": "SLIIT Research Team",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
