Commit-14-Add image pipeline & normalize logs
Add Image-Processing-&-Object-Recognition-Pipeline module (README, services, routers, schemas, tests, FAISS index and mapping) and new requirements for the AI semantic engine. Add a project .gitignore and frontend scaffolding files. Normalize log/print output across multiple AI-Powered-Semantic-Machine modules and scripts (removed emoji/status icons for cleaner logs), update startup/shutdown messages and script outputs, and add various training/test/rebuild script tweaks. Note: .vscode/settings.json contains unresolved merge markers and app/config/model_paths.py appears truncated (needs follow-up to resolve).

--- a/Image-Processing-&-Object-Recognition-Pipeline/requirements.txt
+++ b/Image-Processing-&-Object-Recognition-Pipeline/requirements.txt
@@ -28,3 +28,11 @@ faiss-cpu>=1.7.4
 
 # Image Enhancement (SwinIR)
 basicsr>=1.4.2
+
+# Database & Cache
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+redis>=5.0.0
+
+# Configuration
+pydantic-settings
